--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
         </section>
         <section id="redes-sociais">
+            <a href="#" target="tela"><img src="../projeto-social/pacote-d013/imagens/logo-home.jpg" alt="Home"></a><br>
+
+            <a href="#" target="tela"><img src="../projeto-social/pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+
+            <a href="#" target="tela"><img src="../projeto-social/pacote-d013/imagens/logo-github.jpg" alt="GitHub"></a><br>
+
+            <a href="#" target="tela"><img src="../projeto-social/pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+
+            <a href="#" target="tela"><img src="../projeto-social/pacote-d013/imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+
+            <a href="#" target="tela"><img src="../projeto-social/pacote-d013/imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+
 
         </section>
     </main>
